fix content editable not working on safari

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -117,3 +117,8 @@ html[data-theme="dark"] {
 .action-button:hover {
   color: var(--color-link);
 }
+
+[contenteditable] {
+  -webkit-user-select: text;
+  user-select: text;
+}
